hw7 fixed after secound review